--- a/themes/yolog/source/css/_partial/article.styl
+++ b/themes/yolog/source/css/_partial/article.styl
@@ -12,6 +12,20 @@
 	p, table, h1, h2, h3, ul, ol, dl
 		margin: 1.25rem 0
 
+	ul, ol, dl
+		margin-left: 1.25rem
+	ul li
+		list-style: square
+		padding-left: .5em
+	ol li
+		list-style: decimal
+		padding-left: .5em
+
+	strong
+		font-weight: 600
+	em
+		font-style: italic
+
 	img, video
 		display: block
 		max-width: 100%
