--- a/themes/yolog/source/css/_partial/highlight.styl
+++ b/themes/yolog/source/css/_partial/highlight.styl
@@ -1,6 +1,6 @@
 // https://github.com/chriskempson/tomorrow-theme
 
-highlight-background   = darken(color-background, 5%)
+highlight-background   = darken(color-background, 3%)
 highlight-current-line = #efefef
 highlight-selection    = #d6d6d6
 highlight-foreground   = #4d4d4c
@@ -64,7 +64,7 @@ $code-block
 			color: color-gray
 			text-align: right
 		.line
-			height: 1.667em
+			line-height: 1.4em
 		.line.marked
 			background-color: highlight-selection
 
