--- a/themes/yolog/source/css/_variables.styl
+++ b/themes/yolog/source/css/_variables.styl
@@ -12,7 +12,7 @@ color-border = #d7dcd2
 
 // Fonts
 font-base = "Source Sans Pro", "Helvetica Neue", Arial, sans-serif
-font-code = "Source Code Pro", Consolas, Monaco, Menlo, Courier, monospace
+font-code = "Source Code Pro", Menlo, Courier, monospace
 
 // Header
 logo-width = 32px
