--- a/themes/yolog/source/css/_partial/highlight.styl
+++ b/themes/yolog/source/css/_partial/highlight.styl
@@ -21,6 +21,7 @@ $code-block
 	background-color: highlight-background
 	margin: 1.25rem 0
 	padding: 1rem 0
+	border-radius: 3px
 	color: highlight-foreground
 	overflow: auto
 	-webkit-overflow-scrolling: touch
