--- a/themes/yolog/source/css/_responsive.styl
+++ b/themes/yolog/source/css/_responsive.styl
@@ -67,8 +67,14 @@
 		height: 42px
 		margin: 0
 
-	nav ul li
-		display: inline-block
-		line-height: 3.125rem
-		& + li
-			margin: 0 0 0 .5rem
+	nav
+		position: absolute
+		top: 4.375rem
+		right: 1.25rem
+		left: 1.25rem
+		padding: 2.5rem 0
+		border-radius: 3px
+		background-color: darken(color-background, 3%)
+		box-shadow: 0 0 .5rem color-gray
+		li
+			font-size: 1.25rem
