--- a/themes/yolog/layout/_partial/meta.pug
+++ b/themes/yolog/layout/_partial/meta.pug
@@ -12,3 +12,5 @@ meta(name="x5-orientation" content="portrait")
 meta(name="browsermode" content="application")
 meta(name="x5-page-mode" content="app")
 meta(name="format-detection" content="telephone=no,email=no,address=no")
+link(rel="apple-touch-icon" href="/img/touch-icon.png")
+link(rel="shortcut icon" href="/img/favicon.png")
