--- a/themes/yolog/source/css/_responsive.styl
+++ b/themes/yolog/source/css/_responsive.styl
@@ -75,6 +75,6 @@
 		padding: 2.5rem 0
 		border-radius: 3px
 		background-color: darken(color-background, 3%)
-		box-shadow: 0 0 .5rem color-gray
+		box-shadow: 0 .05rem .1rem color-gray
 		li
 			font-size: 1.25rem
