--- a/themes/yolog/source/css/_partial/article.styl
+++ b/themes/yolog/source/css/_partial/article.styl
@@ -9,7 +9,7 @@
 			color: color-gray
 
 .content
-	p, table, h1, h2, h3, ul, ol, dl
+	p, table, h1, h2, h3, ul, ol, dl, img
 		margin: 1.25rem 0
 
 	ul, ol, dl
@@ -30,7 +30,8 @@
 		display: block
 		max-width: 100%
 		height: auto
-		margin: auto
+		margin-left: auto
+		margin-right: auto
 
 	table
 		width: 100%
