--- a/themes/yolog/source/css/_partial/article.styl
+++ b/themes/yolog/source/css/_partial/article.styl
@@ -41,9 +41,13 @@
 			border-bottom: 2px solid color-border
 			font-weight: 500
 			text-align: left
+			&+th
+				padding-left: .5em
 		td
 			padding: .5em 0
 			border-bottom: 1px solid color-border
+			&+td
+				padding-left: .5em
 
 	blockquote
 		padding: 0 2.5rem
