--- a/themes/yolog/source/css/_partial/article.styl
+++ b/themes/yolog/source/css/_partial/article.styl
@@ -26,6 +26,16 @@
 	em, cite
 		font-style: italic
 
+	sup, sub
+		position: relative
+		vertical-align: baseline
+		line-height: 0
+		font-size: 0.75em
+	sup
+		top: -0.5em
+	sub
+		bottom: -0.2em
+
 	img, video
 		display: block
 		max-width: 100%
@@ -39,7 +49,7 @@
 		th
 			padding-bottom: .5em
 			border-bottom: 2px solid color-border
-			font-weight: 500
+			font-weight: 600
 			text-align: left
 			&+th
 				padding-left: .5em
