--- a/themes/yolog/source/css/_partial/article.styl
+++ b/themes/yolog/source/css/_partial/article.styl
@@ -10,10 +10,10 @@
 
 .content
 	p, table, h1, h2, h3, ul, ol, dl, img
-		margin: 1.25rem 0
+		margin: 1.25em 0
 
 	ul, ol, dl
-		margin-left: 1.25rem
+		margin-left: 1.25em
 	ul li
 		list-style: square
 		padding-left: .5em
