--- a/themes/yolog/source/css/_partial/highlight.styl
+++ b/themes/yolog/source/css/_partial/highlight.styl
@@ -32,7 +32,7 @@ $code-block
 	code
 		background-color: highlight-background
 		padding: 0 .5em
-	pre
+	> pre
 		@extend $code-block
 		padding: 1rem
 		code
