word-wrap word-break

--- a/themes/yolog/source/css/_partial/article.styl
+++ b/themes/yolog/source/css/_partial/article.styl
@@ -25,6 +25,9 @@
 		font-weight: 600
 	em, cite
 		font-style: italic
+	cite
+		word-wrap: break-word
+		word-break: break-all
 
 	sup, sub
 		position: relative
