--- a/themes/yolog/source/css/_partial/article.styl
+++ b/themes/yolog/source/css/_partial/article.styl
@@ -9,8 +9,10 @@
 			color: color-gray
 
 .content
-	p, table, h1, h2, h3, ul, ol, dl, img, .scrollable-wrapper
+	p, h1, h2, h3, ul, ol, dl
 		margin: 1.25em 0
+	table, img, .scrollable-wrapper
+		margin: 2em 0
 
 	ul, ol, dl
 		margin-left: 1.25em
@@ -78,3 +80,4 @@
 			margin: 0 auto
 		img
 			max-width: auto
+			margin: 0 auto
