--- a/themes/yolog/source/css/_partial/highlight.styl
+++ b/themes/yolog/source/css/_partial/highlight.styl
@@ -23,7 +23,7 @@ pre
 
 $code-block
 	background-color: highlight-background
-	margin: 1.25rem 0
+	margin: 2em 0
 	border-radius: 3px
 	color: highlight-foreground
 
