--- a/themes/yolog/layout/_layout.pug
+++ b/themes/yolog/layout/_layout.pug
@@ -12,3 +12,5 @@ html(lang="zh-CN")
 			main
 				block main
 		!= js('js/script.js')
+		.hide
+			!= js('http://s13.cnzz.com/z_stat.php?id=1903549&web_id=1903549')
