--- a/themes/yolog/source/css/_base.styl
+++ b/themes/yolog/source/css/_base.styl
@@ -57,6 +57,9 @@ h1, h2, h3
 	white-space: nowrap
 	text-overflow: ellipsis
 
+.hide
+	display: none
+
 .container
 	width: 100%
 	max-width: 47.5rem
