--- a/themes/yolog/source/css/_partial/highlight.styl
+++ b/themes/yolog/source/css/_partial/highlight.styl
@@ -65,9 +65,9 @@ $code-block
 			padding: 0 1rem
 			border: none
 		figcaption
-			height: 1em
 			line-height: 1em
-			margin: 0 1rem 1em
+			padding: 1rem
+			border-bottom: 1px solid #d7dcd2
 			color: highlight-comment
 			a
 				float: right
