--- a/themes/yolog/source/css/_base.styl
+++ b/themes/yolog/source/css/_base.styl
@@ -22,6 +22,8 @@ body
 	-moz-osx-font-smoothing: grayscale
 	font-weight: 400
 	color: color-text
+	&.over-hidden
+		overflow: hidden
 
 a
 	text-decoration: none
