--- a/themes/yolog/source/css/style.styl
+++ b/themes/yolog/source/css/style.styl
@@ -6,5 +6,6 @@
 @import "_partial/article"
 @import "_partial/pagination"
 @import "_partial/highlight"
+@import "_partial/iframe"
 
 @import "_responsive"
