speedy-transition-effect

--- a/themes/yolog/source/css/_partial/highlight.styl
+++ b/themes/yolog/source/css/_partial/highlight.styl
@@ -67,7 +67,7 @@ $code-block
 		figcaption
 			line-height: 1em
 			padding: 1rem
-			border-bottom: 1px solid #d7dcd2
+			border-bottom: 1px solid color-border
 			color: highlight-comment
 			a
 				float: right
