--- a/themes/yolog/source/css/_partial/iframe.styl
+++ b/themes/yolog/source/css/_partial/iframe.styl
@@ -1,3 +1,16 @@
+.demo-p
+	button
+		padding: .5em 1em
+		background-color: color-background
+		border: 1px solid color-border
+		border-radius: 3px
+		cursor: pointer
+		color: color-link
+		&:hover
+			color: color-link-hover
+		&:active
+			color: color-link-active
+
 .iframe-wrapper
 	position: fixed
 	top: 0
